- added new icons - changed module name and description - put xposed bridge jar into project

--- a/XperiaSStatusBarTogglesRemover/res/values/strings.xml
+++ b/XperiaSStatusBarTogglesRemover/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
 
-	<string name="app_name">Xperia S Tweaks</string>
+	<string name="app_name">Xperia S Tweaks for JellyBean 4.1.2</string>
+	<string name="xposed_descrition">Remove status bar toggles/expands launcher grid to 5x4</string>
 	<string name="remove_toggles">Remove status bar toggles</string>
 	<string name="expand_launcher_grid">Expand launcher grid to 4x5</string>
 	<string name="need_restart">Reboot to apply changes</string>
